# utf

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml
include/utf/: byte_to_type_iter.h  stride_iter.h  utf.h  utf16_to_utf32_iter.h  utf32_to_utf16_iter.h  utf32_to_utf8_iter.h  utf8_to_utf32_iter.h  utf_base.h  utf_utility.h
script/: make_single_header.py  utf-config.cmake.in
single_include/utf/: utf.h
test/: CMakeLists.txt
test/data/: data_utf16_be.txt  data_utf16_be_bom.txt  data_utf16_le.txt  data_utf16_le_bom.txt  data_utf32_be.txt  data_utf32_be_bom.txt  data_utf32_le.txt  data_utf32_le_bom.txt  data_utf32_utf8_bad_replaced.txt  data_utf8_bad.txt  data_utf8_bom.txt  test.txt  test_utf32.txt  test_utf8.txt
test/src/: test.h  test_utf16_to_utf32_iterator.cpp  test_utf32_to_utf16_iterator.cpp  test_utf32_to_utf8_iterator.cpp  test_utf8_to_utf32_iterator.cpp
